Extend swagger spec
